<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListPreference
        android:title="@string/pref_pagebulk_label"
        android:key="@string/pref_pagebulk_key"
        android:defaultValue="@string/pref_pagebulk_default"
        android:entryValues="@array/pref_pagebulk_values"
        android:entries="@array/pref_pagebulk_options"
        android:inputType="text"
        android:singleLine="true" />

    <ListPreference
        android:title="@string/pref_sortorder_label"
        android:key="@string/pref_sortorder_key"
        android:defaultValue="@string/pref_sortorder_default"
        android:entryValues="@array/pref_sortorder_values"
        android:entries="@array/pref_sortorder_options"
        android:inputType="text"
         />



</PreferenceScreen>