<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


<LinearLayout
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:id="@+id/fragment_movie_details"
              android:weightSum="1">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:layout_below="@+id/movie_detail_title_text"
            android:paddingTop="75dp"
            android:layout_width="383dp"
            android:layout_height="546dp"
            android:scaleType="centerCrop"
            android:id="@+id/backdrop_image"
            android:alpha="0.3"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/movie_detail_title_text"
            android:layout_gravity="right"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>

            <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:id="@+id/movie_detail_image"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.70"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:paddingTop="75dp"/>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="55dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/movie_detail_release_date_label"
                        android:text="@string/release_date_label"
                        android:gravity="right"
                        android:paddingRight="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="Small Text"
                        android:id="@+id/movie_detail_release_date_text"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:textStyle="bold"/>

                </LinearLayout>
            </FrameLayout>

        </LinearLayout>

        </FrameLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/movie_detail_overview_text"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.24"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp"/>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:id="@+id/movie_detail_popularity_label"
            android:text="@string/movie_popularity_label"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:gravity="right"
            android:paddingTop="5dp"
            android:paddingRight="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/movie_detail_popularity"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:paddingLeft="10dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:id="@+id/movie_detail_vote_rating_label"
            android:text="@string/vote_rating_label"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:gravity="right"
            android:paddingTop="5dp"
            android:paddingRight="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/movie_detail_vote_rating"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:paddingLeft="10dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:id="@+id/movie_detail_vote_average_label"
            android:text="@string/vote_average_label"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:gravity="right"
            android:paddingTop="5dp"
            android:paddingRight="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/movie_detail_vote_average"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:paddingLeft="10dp"/>

    </LinearLayout>

</LinearLayout>
</ScrollView>